--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "db:seed": "node prisma/seed.js"
+    "db:seed": "node prisma/seed.js",
+    "db:create-user": "node prisma/create_user.js"
   },
   "keywords": [],
   "author": "",
