Refactor: Remove unused user creation script from package.json and update seed.js to modify user credentials and phone numbers for roles. Adjust inventory quantities in seed data for better initialization.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "db:seed": "node prisma/seed.js",
-    "db:create-user": "node prisma/create_user.js"
+    "db:seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
